build+fix image height on tablets and larger

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -587,6 +587,7 @@ ol.instructionsOrderedList li::marker {
     }
     .fullRecipePage p{text-align:left;}
     .fullRecipePage h3{text-align:left;}
+    .fullRecipeImage img{max-height:475px;}
 
 }
 
